User can enter peep and view on base page

--- a/views/add_peep.erb
+++ b/views/add_peep.erb
@@ -4,7 +4,7 @@
 <body>
   <h1>Add dat Peep</h1>
   <div>
-    <form action="/add_peep">
+    <form action="/add_peep/new" method='post'>
       <input type="text" name="new_peep" placeholder = "Your peep goes ere">
       <input type='submit' value='Post dat peep'>
     </form>
